# white-city

./: .gitignore  README.md
RelayProofsOfConcept/: README.md
RelayProofsOfConcept/EddsaTendermintServer/: .gitignore  Cargo.toml  Makefile  README.md  TODOS.md  demo.sh  docker-compose.yml  generate.py  kg-demo.sh  protocols.json  run_exp.py  sign-demo.sh  use-cases.md
RelayProofsOfConcept/EddsaTendermintServer/Dockerfiles/: docker-compose.yaml.example  server.Dockerfile  sign-client.Dockerfile
RelayProofsOfConcept/EddsaTendermintServer/Dockerfiles/server/: Dockerfile
RelayProofsOfConcept/EddsaTendermintServer/Dockerfiles/tendermint/: localnode  localnode_empty
RelayProofsOfConcept/EddsaTendermintServer/Dockerfiles/tendermint-localnode/: Dockerfile  config-template.toml  wrapper.sh
RelayProofsOfConcept/EddsaTendermintServer/Dockerfiles/white-city/: Dockerfile
RelayProofsOfConcept/EddsaTendermintServer/examples/: connect.rs  keygen-client.rs  kvstore.rs  sign-client.rs  simple-client.rs
RelayProofsOfConcept/EddsaTendermintServer/mmpc-client/: Cargo.toml
RelayProofsOfConcept/EddsaTendermintServer/mmpc-client/src/: eddsa_peer.rs  eddsa_peer_kg.rs  eddsa_peer_sign.rs  lib.rs  peer.rs  tendermint_client.rs
RelayProofsOfConcept/EddsaTendermintServer/mmpc-server-common/: Cargo.toml
RelayProofsOfConcept/EddsaTendermintServer/mmpc-server-common/src/: lib.rs
RelayProofsOfConcept/EddsaTendermintServer/relay-server-common/: Cargo.toml
RelayProofsOfConcept/EddsaTendermintServer/relay-server-common/src/: lib.rs  protocol.rs
RelayProofsOfConcept/EddsaTendermintServer/src/: lib.rs  relay_app.rs  relay_session.rs
RelayProofsOfConcept/EddsaTendermintServer/tools/: generate.py  kg-demo.sh  local-cluster-delete.sh  local-cluster-init.sh  local-cluster-reset.sh  local-cluster-start.sh  local-cluster-stop.sh  sign-demo.sh
RelayProofsOfConcept/EddsaTendermintServer/tools/docker/: Makefile  README.md  build-server.sh  docker-compose.yml  docker-compose.yml.bak  gen-docker-compose-config.py  gen-empty-block-cluster.py  gen-nonempty-block-cluster.py  start-tendermint-local-testnet.sh  tendermint_Makefile
RelayProofsOfConcept/EddsaTokioServer/: .gitignore  Cargo.toml  README.md  keygen.sh  protocols.json  sign.sh
RelayProofsOfConcept/EddsaTokioServer/common/: Cargo.toml
RelayProofsOfConcept/EddsaTokioServer/common/src/: lib.rs
RelayProofsOfConcept/EddsaTokioServer/examples/: connect.rs  eddsa_key_gen_client.rs  eddsa_sign_client.rs  two_party_eddsa_client.rs
RelayProofsOfConcept/EddsaTokioServer/relay-server-common/: Cargo.toml
RelayProofsOfConcept/EddsaTokioServer/relay-server-common/src/: codec.rs  common.rs  json_codec.rs  lib.rs  protocol.rs
RelayProofsOfConcept/EddsaTokioServer/src/: lib.rs  relay_server.rs  relay_session.rs
RelayProofsOfConcept/EddsaTokioServer/tests/: test_relay_server.rs
RelayProofsOfConcept/Formal-spec/TLA+/: RelayServer.tla
RelayServer/coq/: Makefile  README.md  relayserver.v  subset.v
RelayServer/relay-server/: Cargo.toml  protocols.json
RelayServer/relay-server/common/: Cargo.toml
RelayServer/relay-server/common/src/: codec.rs  common.rs  lib.rs  protocol.rs
RelayServer/relay-server/examples/: connect.rs  two_party_eddsa_client.rs
RelayServer/relay-server/src/: codec.rs  floodsub_local.rs  main.rs  message.json  messages.json  ping_local.rs
playground/pg-eddsa-client/: Cargo.toml
playground/pg-eddsa-client/src/: main.rs
playground/pg-server/: Cargo.toml
playground/pg-server/src/: main.rs
playground/rocket_server/: Cargo.toml
playground/rocket_server/src/: main.rs
