[package]
name = "relay-server"
version = "0.1.0"
authors = ["Avi <kozokinavi@gmail.com>", "Alex Manuskin <amanusk@protonmail.com>"]
edition = "2018"

[dependencies]
serde_derive = "1.0"
serde_json = "1.0"
futures = "0.1"
tokio-core = "0.1"
tokio-io = "0.1"
tokio = "0.1"
tokio-codec = "0.1"
tokio-jsoncodec = "0.1"
byteorder = "1.3"
dict = "0.1.5"
chrono = "0.4"
hex = "0.3.2"
structopt = "0.2"
log = "0.4"
rand = "0.7"
clap = "2.33"
fern = "0.5"
abci = "0.6"
integer-encoding = "1.0.5"
env_logger = "0.6.1"
serde = { version = "1.0", features = ["derive"] }
base64 = "0.10"
subtle-encoding = { version = "0.3", features = ["bech32-preview"] }
better-panic = "0.1.2"
bincode = "1"



relay-server-common = { path = "../EddsaTendermintServer/relay-server-common" }

multi-party-ed25519 = { git = "https://github.com/KZen-networks/multi-party-eddsa" }

[dependencies.curv]
git = "https://github.com/KZen-networks/curv"
features=["ec_ed25519"]

[lib]
name = "relay_server"
path = "src/lib.rs"

[dependencies.tendermint]
version = "0.10.0"
path="/home/amanusk/rust/tendermint-rs"
features = ["rpc"]
