[package]
name = "relay-server"
version = "0.1.0"
authors = ["Avi <kozokinavi@gmail.com>", "Alex Manuskin <amanusk@protonmail.com>"]
edition = "2018"

[dependencies]
chrono = "0.4"
log = "0.4"
clap = "2.33"
fern = "0.5"
abci = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
subtle-encoding = { version = "0.3", features = ["bech32-preview"] }
better-panic = "0.1.2"

relay-server-common = { path = "../EddsaTendermintServer/relay-server-common" }

multi-party-ed25519 = { git = "https://github.com/KZen-networks/multi-party-eddsa" }

[dependencies.curv]
git = "https://github.com/KZen-networks/curv"
features=["ec_ed25519"]

[lib]
name = "relay_server"
path = "src/lib.rs"

[dependencies.tendermint]
version = "0.10.0"
git="https://github.com/amanusk/tendermint-rs"
branch = "develop"
# path="/home/amanusk/rust/tendermint-rs"
features = ["rpc"]
