[package]
name = "relay-server"
version = "0.1.0"
authors = ["Avi <kozokinavi@gmail.com>", "Alex Manuskin <amanusk@protonmail.com>"]
edition = "2018"

[dependencies]
chrono = "0.4"
log = "0.4"
clap = "2.33"
fern = "0.5"
hex = "0.3.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
subtle-encoding = { version = "0.3", features = ["bech32-preview"] }
better-panic = "0.1.2"

relay-server-common = { path = "../EddsaTendermintServer/relay-server-common" }

[dependencies.multi-party-eddsa]
git = "https://github.com/KZen-networks/multi-party-eddsa"
tag = "v0.2.1"

[dependencies.curv]
git = "https://github.com/KZen-networks/curv"
tag = "v0.2.0-ed25519"
features=["ec_ed25519"]

[dependencies.abci]
git="https://github.com/tendermint/rust-abci"
branch="develop"

[dependencies.tendermint]
version = "0.10.0"
git="https://github.com/amanusk/tendermint-rs"
branch = "develop"
features = ["rpc"]

[lib]
name = "relay_server"
path = "src/lib.rs"
