[package]
name = "pg-eddsa-client"
version = "0.1.0"
authors = ["omershlo <omer.shlomovits@gmail.com>"]
edition = "2018"

[dependencies]
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"

reqwest = "0.9.5"

[dependencies.multi-party-ed25519]
git = "https://github.com/KZen-networks/multi-party-eddsa"

[dependencies.curv]
git = "https://github.com/KZen-networks/curv"
features =  ["ed25519"]