[package]
name = "pg-server"
version = "0.1.0"
authors = ["omershlo <omer.shlomovits@gmail.com>"]
edition = "2018"

[dependencies]
rust-gmp = "0.5.0"
rand = "0.5"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
uuid = { version = "0.7", features = ["v4"] }


env_logger = "0.6.0"
futures = "0.1.25"
tokio = "0.1.13"
tokio-stdin-stdout = "0.1.5"
tokio-core = "0.1.17"
tokio-io = "0.1.10"

arrayvec = "0.4.8"
bytes = "0.4.11"
tokio-tcp = "0.1.2"
log = "0.4.6"


byteorder = "1.2.7"

tokio-serde-json = "0.2"