[package]
name = "relay-server-common"
version = "0.1.0"
authors = ["Avi <kozokinavi@gmail.com>", "Alex Manuskin <amanusk@protonmail.com>"]
edition = "2018"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio-core = "0.1"
tokio-codec = "0.1"
byteorder = "1.3"
tokio = "0.1"
log = "0.4"
futures = "0.1"
bytes = "0.4"